Compiling WTF outside of WebKit failed on Windows https://bugs.webkit.org/show_bug.cgi?id=100201

Reviewed by Darin Adler.

Explicitly use the Unicode variants of the Windows API to
allow building the WTF library without the UNICODE define.

* wtf/win/MainThreadWin.cpp:
(WTF::initializeMainThreadPlatform):


git-svn-id: svn://svn.chromium.org/blink/trunk@137054 bbb929c8-8fbe-4397-9dbb-9b2b20218538