third_party/WebKit/Source/WTF/wtf/win/MainThreadWin.cpp
@@ -33,9 +33,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "Assertions.h"
 #include "Threading.h"
-#if !OS(WINCE)
 #include <windows.h>
-#endif
 
 namespace WTF {
 
@@ -58,26 +56,18 @@ void initializeMainThreadPlatform()
         return;
 
     HWND hWndParent = 0;
-#if OS(WINCE)
-    WNDCLASS wcex;
-    memset(&wcex, 0, sizeof(WNDCLASS));
-#else
-    WNDCLASSEX wcex;
-    memset(&wcex, 0, sizeof(WNDCLASSEX));
-    wcex.cbSize = sizeof(WNDCLASSEX);
-#endif
+    WNDCLASSW wcex;
+    memset(&wcex, 0, sizeof(WNDCLASSW));
     wcex.lpfnWndProc    = ThreadingWindowWndProc;
     wcex.lpszClassName  = kThreadingWindowClassName;
-#if OS(WINCE)
-    RegisterClass(&wcex);
-#else
-    RegisterClassEx(&wcex);
+    RegisterClassW(&wcex);
+#if !OS(WINCE)
     hWndParent = HWND_MESSAGE;
 #endif
 
-    threadingWindowHandle = CreateWindow(kThreadingWindowClassName, 0, 0,
+    threadingWindowHandle = CreateWindowW(kThreadingWindowClassName, 0, 0,
        CW_USEDEFAULT, 0, CW_USEDEFAULT, 0, hWndParent, 0, 0, 0);
-    threadingFiredMessage = RegisterWindowMessage(L"com.apple.WebKit.MainThreadFired");
+    threadingFiredMessage = RegisterWindowMessageW(L"com.apple.WebKit.MainThreadFired");
 
     initializeCurrentThreadInternal("Main Thread");
 }
